# CppUtils

./: CMakeLists.txt
src/: main.cpp
src/iterator/: generate.hpp
src/logging/: log.hpp
src/math/: vec.hpp
src/random/: rng.hpp  shuffle.hpp
src/time/: timer.hpp
